--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,75 @@
 body{
 	margin: 0;
 }
+
+@mixin absolute-center{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#title, #quoteBoxMain{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 1);
+	color: white;
+}
+
+#title{
+	z-index: 3;
+	.main{
+		@include absolute-center;
+		text-align: center;
+		color: white;
+
+		form{
+			input{
+				display: block;
+				margin: auto;
+				margin-bottom: 10px;
+			}
+		}
+	}
+}
+
+#quoteBoxMain{
+	z-index: 2;
+	visibility: hidden;
+	opacity: 0;
+	.main{
+		@include absolute-center;
+		text-align: center;
+		h1{
+
+		}
+	}
+
+	.close{
+		margin: auto;
+
+		&:hover{
+			cursor: pointer;
+		}
+	}
+}
+
+.fadeOut{
+	animation: fadeOut 1s 1 forwards;
+}
+
+.fadeIn{
+	animation: fadeIn 1s 1 forwards;
+}
+
+@keyframes fadeOut{
+	0%{opacity: 1};
+	99%{opacity: 0; visibility: visible;}
+	100%{opacity: 0; visibility: hidden;}
+}
+
+@keyframes fadeIn{
+	0%{opacity: 0; visibility: visible;};
+	100%{opacity: 1; visibility: visible;}
+}
