--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,19 @@
+$Caslon: 'CaslonGraphiqueEF';
+$Brandon: 'Brandon Text';
+
+$white: #f9fafc;
+$black: #00010c;
+$gray: #808285;
+$lightgray: #929598;
+
 body{
 	margin: 0;
+}
+
+h1, h2, header, p, a, span{
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 @mixin absolute-center{
@@ -9,26 +23,129 @@ body{
 	transform: translate(-50%, -50%);
 }
 
-#title, #quoteBoxMain{
+#title, #quoteBoxMain, #quoteInput{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 1);
-	color: white;
+	background: $black;
+	color: $white;
 }
 
 #title{
-	z-index: 3;
+	z-index: 4;
+	visibility: hidden;
 	.main{
+		h1{
+			font-family: $Caslon;
+			color: $white;
+			font-weight: lighter;
+			font-size: 5rem;
+			margin: 0;
+			text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+		}
+		h2{
+			font-family: $Brandon;
+			font-weight: lighter;
+			font-size: 1.4rem;
+			margin: 0;
+			margin-bottom: 10px;
+		}
 		@include absolute-center;
 		text-align: center;
-		color: white;
+		color: $white;
 
 		form{
 			input{
 				display: block;
 				margin: auto;
 				margin-bottom: 10px;
+			}
+		}
+	}
+}
+
+#quoteInput{
+	z-index: 3;
+	.main{
+		width: 600px; //bad
+		@include absolute-center;
+		text-align: center;
+		h1{
+			font-family: $Caslon;
+			color: $white;
+			font-weight: lighter;
+			font-size: 2rem;
+			margin: 0;
+			margin-bottom: 25px;
+		}
+
+		#prompt{
+			position: relative;
+			.textinput{
+				position: relative;
+				background: none;
+				color: $lightgray;
+				border: none;
+				text-align: center;
+				resize: none;
+				font-family: $Brandon;
+				font-weight: lighter;
+				font-size: 20px;
+				transition: all .5s;
+				padding: 0;
+				line-height: 22px;
+				margin-bottom: 30px;
+				width: 100%;
+
+				&:focus + i {
+				    display: none;
+				}
+
+				&:focus{
+					outline: none;
+				}
+			}
+		}
+
+
+		.remaining{
+			font-family: $Brandon;
+			font-weight: lighter;
+			font-size: 15px;
+			color: $gray;
+			margin-bottom: 20px;
+		}
+
+		#userSubmitQuote{
+			// display: none;
+			display: block;
+			margin: auto;
+			position: relative;
+			font-family: 'Open Sans', sans-serif;
+			height: 30px;
+			width: 30px;
+			border-radius: 50%;
+			border: 1px solid $lightgray;
+			cursor: pointer;
+			transition: box-shadow .25s ease;
+			box-shadow: 0px 0px 10px white;
+			// animation: blinkGlow 2s infinite alternate;
+
+			&:before{
+				content: ">";
+				position: absolute;
+				@include absolute-center;
+			}
+
+			&:hover{
+				border: 1px solid $white;
+				animation: none;
+				box-shadow: 0px 0px 40px white; 
+			}
+
+			@keyframes blinkGlow{
+				0%{box-shadow: 0px 0px 5px white;}
+				100%{box-shadow: 0px 0px 15px white;}
 			}
 		}
 	}
@@ -73,3 +190,4 @@ body{
 	0%{opacity: 0; visibility: visible;};
 	100%{opacity: 1; visibility: visible;}
 }
+
