--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ h1, h2, header, p, a, span {
   color: #f9fafc; }
 
 #title {
-  z-index: 4;
-  visibility: hidden; }
+  z-index: 4; }
   #title .main {
     position: absolute;
     top: 50%;
@@ -33,8 +32,9 @@ h1, h2, header, p, a, span {
     #title .main h2 {
       font-family: "Brandon Text";
       font-weight: lighter;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       margin: 0;
+      color: #929598;
       margin-bottom: 10px; }
     #title .main form input {
       display: block;
@@ -42,7 +42,8 @@ h1, h2, header, p, a, span {
       margin-bottom: 10px; }
 
 #quoteInput {
-  z-index: 3; }
+  z-index: 3;
+  visibility: hidden; }
   #quoteInput .main {
     width: 600px;
     position: absolute;
