--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,7 +23,7 @@ h1, h2, header, p, a, span{
 	transform: translate(-50%, -50%);
 }
 
-#title, #quoteBoxMain, #quoteInput{
+#title, #quoteMain, #quoteInput{
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -32,6 +32,7 @@ h1, h2, header, p, a, span{
 }
 
 #title{
+	background: none !important;
 	z-index: 4;
 	.main{
 		h1{
@@ -40,7 +41,6 @@ h1, h2, header, p, a, span{
 			font-weight: lighter;
 			font-size: 5rem;
 			margin: 0;
-			text-shadow: 0 0 20px rgba(255, 255, 255, 1);
 		}
 		h2{
 			font-family: $Brandon;
@@ -117,42 +117,10 @@ h1, h2, header, p, a, span{
 			margin-bottom: 20px;
 		}
 
-		#userSubmitQuote{
-			// display: none;
-			display: block;
-			margin: auto;
-			position: relative;
-			font-family: 'Open Sans', sans-serif;
-			height: 30px;
-			width: 30px;
-			border-radius: 50%;
-			border: 1px solid $lightgray;
-			cursor: pointer;
-			transition: box-shadow .25s ease;
-			box-shadow: 0px 0px 10px white;
-			// animation: blinkGlow 2s infinite alternate;
-
-			&:before{
-				content: ">";
-				position: absolute;
-				@include absolute-center;
-			}
-
-			&:hover{
-				border: 1px solid $white;
-				animation: none;
-				box-shadow: 0px 0px 40px white; 
-			}
-
-			@keyframes blinkGlow{
-				0%{box-shadow: 0px 0px 5px white;}
-				100%{box-shadow: 0px 0px 15px white;}
-			}
-		}
 	}
 }
 
-#quoteBoxMain{
+#quoteMain{
 	z-index: 2;
 	visibility: hidden;
 	opacity: 0;
@@ -192,3 +160,40 @@ h1, h2, header, p, a, span{
 	100%{opacity: 1; visibility: visible;}
 }
 
+.submitButton{
+	// display: none;
+	display: block;
+	margin: auto;
+	position: relative;
+	font-family: 'Open Sans', sans-serif;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	border: 1px solid $lightgray;
+	cursor: pointer;
+	transition: box-shadow .25s ease;
+	box-shadow: 0px 0px 10px white;
+	// animation: blinkGlow 2s infinite alternate;
+
+	&:before{
+		content: ">";
+		position: absolute;
+		@include absolute-center;
+	}
+}
+
+.glowBorder{
+	@keyframes blinkGlow{
+		0%{box-shadow: 0px 0px 5px white;}
+		100%{box-shadow: 0px 0px 15px white;}
+	}
+	&:hover{
+		border: 1px solid $white;
+		animation: none;
+		box-shadow: 0px 0px 40px white; 
+	}
+}
+
+.glow{
+	text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+}
