--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,15 @@
 $Caslon: 'CaslonGraphiqueEF';
 $Brandon: 'Brandon Text';
+$Grouch: 'ITC Grouch';
+$Univers: 'Univers';
 
-$white: #f9fafc;
+@mixin instruction-font(){
+	font-family: $Univers;
+	// font-weight: 300;
+	font-style: italic;
+}
+
+$white: #f4f5f7;
 $black: #00010c;
 $gray: #808285;
 $lightgray: #929598;
@@ -23,7 +31,7 @@ h1, h2, header, p, a, span{
 	transform: translate(-50%, -50%);
 }
 
-#title, #quoteMain, #quoteInput{
+.screen{
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -35,8 +43,9 @@ h1, h2, header, p, a, span{
 	background: none !important;
 	z-index: 4;
 	.main{
+		text-align: center;
 		h1{
-			font-family: $Caslon;
+			font-family: $Grouch;
 			color: $white;
 			font-weight: lighter;
 			font-size: 5rem;
@@ -47,8 +56,14 @@ h1, h2, header, p, a, span{
 			font-weight: lighter;
 			font-size: 1.3rem;
 			margin: 0;
-			color: $lightgray;
+			color: $white;
 			margin-bottom: 10px;
+		}
+		p{
+			@include instruction-font();
+			font-size: .8rem;
+			margin: 30px;
+			color: $lightgray;
 		}
 		@include absolute-center;
 		text-align: center;
@@ -182,11 +197,12 @@ h1, h2, header, p, a, span{
 	}
 }
 
+@keyframes blinkGlowBorder{
+	0%{box-shadow: 0px 0px 5px white;}
+	100%{box-shadow: 0px 0px 15px white;}
+}
+
 .glowBorder{
-	@keyframes blinkGlow{
-		0%{box-shadow: 0px 0px 5px white;}
-		100%{box-shadow: 0px 0px 15px white;}
-	}
 	&:hover{
 		border: 1px solid $white;
 		animation: none;
@@ -194,6 +210,20 @@ h1, h2, header, p, a, span{
 	}
 }
 
+@keyframes blinkGlow{
+		0%{text-shadow: 0 0 15px rgba(255, 255, 255, 1);}
+		100%{text-shadow: 0 0 30px rgba(255, 255, 255, 1);}
+	}
+
+
 .glow{
 	text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+}
+
+.glowAnim{
+	animation: blinkGlow 2s alternate infinite linear;
+}
+
+.blinkAnim{
+	animation: fadeIn 2s alternate infinite linear;
 }
