--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 body {
   margin: 0; }
 
@@ -10,12 +13,13 @@ h1, h2, header, p, a, span {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #00010c;
+  background: rgba(0, 1, 12, 0.8);
   color: #f4f5f7; }
 
 #title {
   background: none !important;
-  z-index: 4; }
+  z-index: 4;
+  display: none; }
   #title .main {
     text-align: center;
     position: absolute;
@@ -62,7 +66,7 @@ h1, h2, header, p, a, span {
       font-family: "CaslonGraphiqueEF";
       color: #f4f5f7;
       font-weight: lighter;
-      font-size: 2rem;
+      font-size: 2.15rem;
       margin: 0;
       margin-bottom: 25px; }
     #quoteInput .main #prompt {
@@ -70,7 +74,7 @@ h1, h2, header, p, a, span {
       #quoteInput .main #prompt .textinput {
         position: relative;
         background: none;
-        color: #929598;
+        color: #cbcdd0;
         border: none;
         text-align: center;
         resize: none;
@@ -103,9 +107,24 @@ h1, h2, header, p, a, span {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
-  #quoteMain .close {
-    margin: auto; }
-    #quoteMain .close:hover {
+    #quoteMain .main h1 {
+      font-family: "Brandon Text";
+      color: #f4f5f7;
+      font-size: 2rem;
+      width: 600px;
+      margin: auto;
+      font-weight: lighter;
+      margin-bottom: 0; }
+    #quoteMain .main p {
+      font-family: "Brandon Text";
+      color: #929598;
+      font-size: 1.2rem;
+      margin: 0;
+      margin: 15px; }
+  #quoteMain #quoteMainClose {
+    margin: auto;
+    margin-top: 35px; }
+    #quoteMain #quoteMainClose:hover {
       cursor: pointer; }
 
 .fadeOut {
@@ -177,3 +196,136 @@ h1, h2, header, p, a, span {
 
 .blinkAnim {
   animation: fadeIn 2s alternate infinite linear; }
+
+@keyframes fadeOutBlur {
+  0% {
+    filter: blur(0px);
+    opacity: 1; }
+  99% {
+    filter: blur(100px);
+    opacity: 0;
+    visibility: visible; }
+  100% {
+    filter: blur(100px);
+    opacity: 0;
+    visibility: hidden; } }
+
+@keyframes fadeInBlur {
+  0% {
+    filter: blur(100px);
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+    visibility: visible; } }
+
+.fadeOutBlur {
+  animation: fadeOutBlur forwards 1.1s cubic-bezier(0.65, 0.09, 0.92, 0.29); }
+
+.fadeInBlur {
+  animation: fadeOutBlur forwards 1.1s cubic-bezier(0.65, 0.09, 0.92, 0.29); }
+
+/* donation form */
+#donation {
+  z-index: 5;
+  width: 65%;
+  padding: 20px;
+  background: none; }
+  #donation .wrapper {
+    height: 100%;
+    width: 100%;
+    padding: 50px;
+    padding-top: 150px;
+    box-shadow: #00010c 0px 0px 30px;
+    background: rgba(0, 1, 12, 0.8); }
+  #donation .main {
+    display: inline-block;
+    float: left;
+    margin-right: 25px;
+    width: 80%; }
+    #donation .main .info {
+      margin-bottom: 50px; }
+      #donation .main .info h1 {
+        font-family: "CaslonGraphiqueEF";
+        font-size: 2rem;
+        color: #f4f5f7;
+        font-weight: lighter; }
+      #donation .main .info p {
+        font-family: "Brandon Text";
+        font-size: 1rem;
+        color: #cbcdd0; }
+      #donation .main .info a {
+        font-family: "Brandon Text";
+        font-size: 1rem;
+        color: #808285;
+        transition: all .5s ease; }
+        #donation .main .info a:hover {
+          color: #f4f5f7;
+          text-shadow: 0 0 15px white; }
+  #donation .form {
+    display: inline-block;
+    float: left; }
+  #donation label {
+    display: block;
+    text-align: left;
+    font-family: "Brandon Text";
+    font-size: 1rem;
+    color: #929598;
+    margin-bottom: 2px; }
+  #donation input {
+    outline: none;
+    border: none; }
+  #donation select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 5px;
+    padding-left: 7.5px;
+    margin: 0;
+    font-size: 1rem;
+    border-radius: 0;
+    font-family: "Brandon Text";
+    display: inline-block;
+    background: none;
+    color: #cbcdd0;
+    border: none;
+    outline: none;
+    border-bottom: #929598 1px solid; }
+    #donation select:focus {
+      border-bottom: #f4f5f7 1px solid; }
+  #donation .form-control:focus {
+    border-bottom: #f4f5f7 1px solid; }
+  #donation .form-group {
+    float: left;
+    display: inline-block;
+    margin-bottom: 15px; }
+  #donation .description {
+    display: block;
+    font-size: .75rem;
+    color: #808285;
+    font-family: "Univers";
+    font-weight: 300;
+    font-style: italic;
+    margin-top: 4px; }
+  #donation .form-control {
+    display: block;
+    border-bottom: #929598 1px solid;
+    transition: all 0.6s cubic-bezier(0.16, 0.89, 0.44, 0.9);
+    background: none;
+    font-size: 1rem;
+    font-family: "Brandon Text";
+    color: #cbcdd0;
+    padding: 7.5px;
+    width: 100%; }
+  #donation #donationForm .name {
+    width: 63%;
+    margin-right: 15px; }
+  #donation #donationForm .cvv {
+    width: 30%; }
+  #donation #donationForm .number {
+    width: 100%; }
+  #donation #donationForm .expiration {
+    font-size: .8rem;
+    width: 20%;
+    padding-left: 0; }
