--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,12 @@ $Univers: 'Univers';
 	font-style: italic;
 }
 
+*{
+	box-sizing: border-box;
+}
+
 $white: #f4f5f7;
+$darkwhite: #cbcdd0;
 $black: #00010c;
 $gray: #808285;
 $lightgray: #929598;
@@ -35,13 +40,14 @@ h1, h2, header, p, a, span{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: $black;
+	background: rgba(0, 1, 12, .8);
 	color: $white;
 }
 
 #title{
 	background: none !important;
 	z-index: 4;
+	display: none;
 	.main{
 		text-align: center;
 		h1{
@@ -90,7 +96,7 @@ h1, h2, header, p, a, span{
 			font-family: $Caslon;
 			color: $white;
 			font-weight: lighter;
-			font-size: 2rem;
+			font-size: 2.15rem;
 			margin: 0;
 			margin-bottom: 25px;
 		}
@@ -100,7 +106,7 @@ h1, h2, header, p, a, span{
 			.textinput{
 				position: relative;
 				background: none;
-				color: $lightgray;
+				color: $darkwhite;
 				border: none;
 				text-align: center;
 				resize: none;
@@ -143,13 +149,26 @@ h1, h2, header, p, a, span{
 		@include absolute-center;
 		text-align: center;
 		h1{
-
+			font-family: $Brandon;
+			color: $white;
+			font-size: 2rem;
+			width: 600px;
+			margin: auto;
+			font-weight: lighter;
+			margin-bottom: 0;
+		}
+		p{ //user
+			font-family: $Brandon;
+			color: $lightgray;
+			font-size: 1.2rem;
+			margin: 0;
+			margin: 15px;
 		}
 	}
 
-	.close{
+	#quoteMainClose{
 		margin: auto;
-
+		margin-top: 35px;
 		&:hover{
 			cursor: pointer;
 		}
@@ -227,3 +246,162 @@ h1, h2, header, p, a, span{
 .blinkAnim{
 	animation: fadeIn 2s alternate infinite linear;
 }
+
+@keyframes fadeOutBlur{
+	0%{filter: blur(0px); opacity: 1;}
+	99%{filter: blur(100px); opacity: 0; visibility: visible;}
+	100%{filter: blur(100px); opacity: 0; visibility: hidden;}
+}
+
+@keyframes fadeInBlur{
+	0%{filter: blur(100px); opacity: 0; visibility: hidden;}
+	100%{filter: blur(0px); opacity: 1; visibility: visible;}
+}
+
+.fadeOutBlur{
+	animation: fadeOutBlur forwards 1.1s cubic-bezier(.65,.09,.92,.29);
+}
+
+.fadeInBlur{
+	animation: fadeOutBlur forwards 1.1s cubic-bezier(.65,.09,.92,.29);
+}
+
+/* donation form */
+
+#donation{
+	z-index: 5;
+	width: 65%;
+	padding: 20px;
+	background: none;
+	.wrapper{
+		height: 100%;
+		width: 100%;
+		padding: 50px;
+		padding-top: 150px;
+		box-shadow: $black 0px 0px 30px;
+		background: rgba(0, 1, 12, .8);
+	}
+	.main{
+		display: inline-block;
+		float: left;
+		margin-right: 25px;
+		width: 80%;
+		.info{
+			margin-bottom: 50px;
+			h1{
+			font-family: $Caslon;
+			font-size: 2rem;
+			color: $white;
+			font-weight: lighter;
+			}
+			p{
+				font-family: $Brandon;
+				font-size: 1rem;
+				color: $darkwhite;
+			}
+			a{
+				font-family: $Brandon;
+				font-size: 1rem;
+				color: $gray;
+				transition: all .5s ease;
+				&:hover{
+					color: $white;
+					text-shadow: 0 0 15px rgba(255, 255, 255, 1);
+				}
+			}
+		}
+	}
+
+	.form{
+		display: inline-block;
+		float: left;
+	}
+
+	label{
+		display: block;
+		text-align: left;
+		// width: 100%;
+		font-family: $Brandon;
+		font-size: 1rem;
+		color: $lightgray;
+		margin-bottom: 2px;
+	}
+
+	input{
+		outline: none;
+		border: none;
+	}
+
+	select{
+		-webkit-appearance: none;
+	    -moz-appearance: none;
+	    appearance: none;
+	    padding: 5px;
+	    padding-left: 7.5px;
+		margin: 0;
+		font-size: 1rem;
+		border-radius: 0;
+		font-family: $Brandon;
+		display: inline-block;
+		background: none;
+		color: $darkwhite;
+		border: none;
+		outline: none;
+		border-bottom: $lightgray 1px solid;
+		&:focus{
+			border-bottom: $white 1px solid;
+		}
+	}
+
+	.form-control:focus{
+		border-bottom: $white 1px solid;
+	}
+
+	.form-group{
+		float: left;
+		display: inline-block;
+		margin-bottom: 15px;
+	}
+
+	.description{
+		display: block;
+		font-size: .75rem;
+		color: $gray;
+		font-family: $Univers;
+		font-weight: 300;
+		font-style: italic;
+		margin-top: 4px;
+	}
+
+	.form-control{
+		display: block;
+		border-bottom: $lightgray 1px solid;
+		transition: all .6s cubic-bezier(.16,.89,.44,.9);
+		// border: $gray 1px solid;
+		background: none;
+		font-size: 1rem;
+		font-family: $Brandon;
+		color: $darkwhite;
+		padding: 7.5px;
+		width: 100%;
+	}
+
+	#donationForm{
+		.name{
+			width: 63%;
+			margin-right: 15px;
+		}
+		.cvv{
+			width: 30%;
+		}
+		.number{
+			width: 100%;
+		}
+		.expiration{
+			font-size: .8rem;
+			width: 20%;
+			padding-left: 0;
+		}
+	}
+}
+
