--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -276,8 +276,13 @@ h1, h2, header, p, a, span{
 	.wrapper{
 		height: 100%;
 		width: 100%;
-		padding: 50px;
-		padding-top: 150px;
+		padding: 35px;
+		.submitButton:before{
+			content: '<';
+		}
+		.submitButton{
+			margin: 0;
+		}
 		box-shadow: $black 0px 0px 30px;
 		background: rgba(0, 1, 12, .8);
 	}
@@ -287,6 +292,7 @@ h1, h2, header, p, a, span{
 		margin-right: 25px;
 		width: 80%;
 		.info{
+			margin-top: 80px;
 			margin-bottom: 50px;
 			h1{
 			font-family: $Caslon;
@@ -312,9 +318,8 @@ h1, h2, header, p, a, span{
 		}
 	}
 
-	.form{
-		display: inline-block;
-		float: left;
+	#donationForm{
+		width: 90%;
 	}
 
 	label{
@@ -323,8 +328,9 @@ h1, h2, header, p, a, span{
 		// width: 100%;
 		font-family: $Brandon;
 		font-size: 1rem;
-		color: $lightgray;
+		color: $gray;
 		margin-bottom: 2px;
+		transition: all .5s ease;
 	}
 
 	input{
@@ -347,7 +353,7 @@ h1, h2, header, p, a, span{
 		color: $darkwhite;
 		border: none;
 		outline: none;
-		border-bottom: $lightgray 1px solid;
+		border-bottom: $gray 1px solid;
 		&:focus{
 			border-bottom: $white 1px solid;
 		}
@@ -361,6 +367,10 @@ h1, h2, header, p, a, span{
 		float: left;
 		display: inline-block;
 		margin-bottom: 15px;
+		// &:hover label{
+		// 	color: $white;
+		// 	text-shadow: 0 0 15px rgba(255, 255, 255, 1);
+		// }
 	}
 
 	.description{
@@ -375,7 +385,7 @@ h1, h2, header, p, a, span{
 
 	.form-control{
 		display: block;
-		border-bottom: $lightgray 1px solid;
+		border-bottom: $gray 1px solid;
 		transition: all .6s cubic-bezier(.16,.89,.44,.9);
 		// border: $gray 1px solid;
 		background: none;
@@ -388,19 +398,44 @@ h1, h2, header, p, a, span{
 
 	#donationForm{
 		.name{
-			width: 63%;
+			width: 64%;
 			margin-right: 15px;
 		}
 		.cvv{
-			width: 30%;
+			width: 32%;
 		}
 		.number{
 			width: 100%;
 		}
 		.expiration{
 			font-size: .8rem;
-			width: 20%;
+			width: 100%;
+			min-width: 50px;
 			padding-left: 0;
+			input{
+				width: 10%;
+			}
+		}
+		#submit{
+			margin-top: 25px;
+			display: inline-block;
+
+			button{
+				border: none;
+				display: block;
+				font-family: $Brandon;
+				background: none;
+				border-radius: 0;
+				color: $lightgray;
+				font-size: 1rem;
+				padding: 0;
+				transition: all .5s ease;
+				&:hover{
+					color: $white;
+					cursor: pointer;
+					text-shadow: 0 0 15px rgba(255, 255, 255, 1);
+				}
+			}	
 		}
 	}
 }
