--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,7 +47,6 @@ h1, h2, header, p, a, span{
 #title{
 	background: none !important;
 	z-index: 4;
-	display: none;
 	.main{
 		text-align: center;
 		h1{
@@ -70,6 +69,7 @@ h1, h2, header, p, a, span{
 			font-size: .8rem;
 			margin: 30px;
 			color: $lightgray;
+			opacity: 0;
 		}
 		@include absolute-center;
 		text-align: center;
@@ -85,7 +85,7 @@ h1, h2, header, p, a, span{
 	}
 }
 
-#quoteInput{
+#quoteInput, #nameInput{
 	z-index: 3;
 	visibility: hidden;
 	.main{
@@ -139,6 +139,10 @@ h1, h2, header, p, a, span{
 		}
 
 	}
+}
+
+#nameInput{
+	z-index: 2;
 }
 
 #quoteMain{
@@ -230,9 +234,9 @@ h1, h2, header, p, a, span{
 }
 
 @keyframes blinkGlow{
-		0%{text-shadow: 0 0 15px rgba(255, 255, 255, 1);}
-		100%{text-shadow: 0 0 30px rgba(255, 255, 255, 1);}
-	}
+	0%{text-shadow: 0 0 15px rgba(255, 255, 255, 1);}
+	100%{text-shadow: 0 0 30px rgba(255, 255, 255, 1);}
+}
 
 
 .glow{
@@ -259,11 +263,11 @@ h1, h2, header, p, a, span{
 }
 
 .fadeOutBlur{
-	animation: fadeOutBlur forwards 1.1s cubic-bezier(.65,.09,.92,.29);
+	animation: fadeOutBlur forwards 2s ease;
 }
 
 .fadeInBlur{
-	animation: fadeOutBlur forwards 1.1s cubic-bezier(.65,.09,.92,.29);
+	animation: fadeInBlur forwards 2s ease;
 }
 
 /* donation form */
@@ -272,8 +276,10 @@ h1, h2, header, p, a, span{
 	z-index: 5;
 	width: 65%;
 	padding: 20px;
+	visibility: hidden;
 	background: none;
 	.wrapper{
+		overflow: scroll;
 		height: 100%;
 		width: 100%;
 		padding: 35px;
@@ -292,7 +298,7 @@ h1, h2, header, p, a, span{
 		margin-right: 25px;
 		width: 80%;
 		.info{
-			margin-top: 80px;
+			margin-top: 70px;
 			margin-bottom: 50px;
 			h1{
 			font-family: $Caslon;
@@ -318,6 +324,11 @@ h1, h2, header, p, a, span{
 		}
 	}
 
+	#donationQuoteAnswer{
+		color: $white;
+		text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+	}
+
 	#donationForm{
 		width: 90%;
 	}
@@ -329,7 +340,7 @@ h1, h2, header, p, a, span{
 		font-family: $Brandon;
 		font-size: 1rem;
 		color: $gray;
-		margin-bottom: 2px;
+		margin-bottom: 1px;
 		transition: all .5s ease;
 	}
 
@@ -381,6 +392,7 @@ h1, h2, header, p, a, span{
 		font-weight: 300;
 		font-style: italic;
 		margin-top: 4px;
+		margin-bottom: 0;
 	}
 
 	.form-control{
@@ -397,6 +409,7 @@ h1, h2, header, p, a, span{
 	}
 
 	#donationForm{
+		width: 80%;
 		.name{
 			width: 64%;
 			margin-right: 15px;
@@ -409,17 +422,29 @@ h1, h2, header, p, a, span{
 		}
 		.expiration{
 			font-size: .8rem;
-			width: 100%;
 			min-width: 50px;
 			padding-left: 0;
+			width: 15%;
+			margin-right: 40px;
 			input{
-				width: 10%;
+				width: 100%;
 			}
 		}
-		#submit{
-			margin-top: 25px;
+		.amount{
+			width: 20%;
+			input{
+				width: 100%;
+				display:inline-block;
+				float: left;
+			}
+		}
+		.email{
+			width: 100%;
+		}
+		#donationSubmit{
+			margin-top: 17px;
 			display: inline-block;
-
+			width: 100%;
 			button{
 				border: none;
 				display: block;
