broken get call, but post works

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ h1, h2, header, p, a, span {
           text-shadow: 0 0 15px white; }
   #donation #donationQuoteAnswer {
     color: #f4f5f7;
+    font-size: 1.5rem;
     text-shadow: 0 0 20px white; }
   #donation #donationForm {
     width: 90%; }
