--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -326,6 +326,7 @@ h1, h2, header, p, a, span{
 
 	#donationQuoteAnswer{
 		color: $white;
+		font-size: 1.5rem;
 		text-shadow: 0 0 20px rgba(255, 255, 255, 1);
 	}
 
