--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
 <body>
 	<p><%= id %></p>
 </body>
-<script src="/js/lib.js"></script>
-<script src="/js/app.js"></script>
+<script type="text/javascript" src="/js/dist/lib.js"></script>
+<script type="text/javascript" src="/js/dist/app.js"></script>
 </html>
