dynamic and static pages work now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="/assets/fonts/caslon-web/stylesheet.css"/>
+	<link rel="stylesheet" type="text/css" href="/assets/fonts/brandon-text-web/stylesheet.css"/>
+	<link rel="stylesheet" type="text/css" href="/assets/fonts/itc-grouch-web/stylesheet.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<title><%= id %></title>
 </head>
 <body>
-	<p><%= id %></p>
+	<div id="container"></div>
 </body>
-<script type="text/javascript" src="/js/dist/lib.js"></script>
-<script type="text/javascript" src="/js/dist/app.js"></script>
+<script type="text/javascript" src="/js/lib/three.js"></script>
+<script type="text/javascript" src="/js/lib/OrbitControls.js"></script>
+<script type="text/javascript" src="/js/lib/SubdivisionModifier.js"></script>
+<script type="text/javascript" src="/js/lib/GeometryUtils.js"></script>
+<script type="text/javascript" src="/js/lib/Tween.js"></script>
+<script type="text/javascript" src="/js/util.js"></script>
+<script type="text/javascript" src="/js/data.js"></script>
+<script type="text/javascript" src="/js/Loader.js"></script>
+<script type="text/javascript" src="/js/Globe.js"></script>
+<script type="text/javascript" src="/js/glowMesh.js"></script>
+<script type="text/javascript" src="/js/Avatar.js"></script>
+<script type="text/javascript" src="/js/API.js"></script>
+<script type="text/javascript" src="/js/WorldController.js"></script>
+<script type="text/javascript" src="/js/main-viewer.js"></script>
 </html>
