--- a/public/css/style.css
+++ b/public/css/style.css
@@ -368,7 +368,7 @@ h1, h2, header, p, a, span {
     #donation #donationForm .email {
       width: 100%; }
     #donation #donationForm #donationSubmit {
-      margin-top: 17px;
+      margin: 17px 0 17px 0;
       display: inline-block;
       width: 100%; }
       #donation #donationForm #donationSubmit button {
@@ -385,3 +385,10 @@ h1, h2, header, p, a, span {
           color: #f4f5f7;
           cursor: pointer;
           text-shadow: 0 0 15px white; }
+    #donation #donationForm .error ul {
+      padding: 0;
+      color: #c14f49;
+      font-family: "Brandon Text";
+      font-size: 1rem;
+      font-weight: lighter;
+      list-style: none; }
