spacebar to move

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,9 @@
   box-sizing: border-box; }
 
 body {
+  overflow: hidden; }
+
+body {
   margin: 0; }
 
 h1, h2, header, p, a, span {
@@ -139,11 +142,9 @@ h1, h2, header, p, a, span {
 @keyframes fadeOut {
   0% {
     opacity: 1; }
-
   99% {
     opacity: 0;
     visibility: visible; }
-
   100% {
     opacity: 0;
     visibility: hidden; } }
@@ -152,7 +153,6 @@ h1, h2, header, p, a, span {
   0% {
     opacity: 0;
     visibility: visible; }
-
   100% {
     opacity: 1;
     visibility: visible; } }
@@ -180,7 +180,6 @@ h1, h2, header, p, a, span {
 @keyframes blinkGlowBorder {
   0% {
     box-shadow: 0px 0px 5px white; }
-
   100% {
     box-shadow: 0px 0px 15px white; } }
 
@@ -192,7 +191,6 @@ h1, h2, header, p, a, span {
 @keyframes blinkGlow {
   0% {
     text-shadow: 0 0 15px white; }
-
   100% {
     text-shadow: 0 0 30px white; } }
 
@@ -209,12 +207,10 @@ h1, h2, header, p, a, span {
   0% {
     filter: blur(0px);
     opacity: 1; }
-
   99% {
     filter: blur(100px);
     opacity: 0;
     visibility: visible; }
-
   100% {
     filter: blur(100px);
     opacity: 0;
@@ -225,7 +221,6 @@ h1, h2, header, p, a, span {
     filter: blur(100px);
     opacity: 0;
     visibility: hidden; }
-
   100% {
     filter: blur(0px);
     opacity: 1;
