--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,6 +13,10 @@ $Univers: 'Univers';
 	box-sizing: border-box;
 }
 
+body{
+	overflow: hidden;
+}
+
 $white: #f4f5f7;
 $darkwhite: #cbcdd0;
 $black: #00010c;
