--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,7 +383,9 @@ h1, h2, header, p, a, span {
     #donation #donationForm .error ul {
       padding: 0;
       color: #c14f49;
-      font-family: "Brandon Text";
-      font-size: 1rem;
-      font-weight: lighter;
+      font-family: "Univers";
+      font-size: .8rem;
+      font-weight: 300;
+      font-style: italic;
+      text-transform: lowercase;
       list-style: none; }
