--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -476,9 +476,11 @@ h1, h2, header, p, a, span{
 			ul {
 				padding: 0;
 				color: $red;
-				font-family: $Brandon;
-				font-size: 1rem;
-				font-weight: lighter;
+				font-family: $Univers;
+				font-size: .8rem;
+				font-weight: 300;
+				font-style: italic;
+				text-transform: lowercase;
 				list-style: none;
 			}
 		}
