--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -37,14 +37,22 @@
 			<div id="quoteInputErr" class="inputErr">&zwnj;</div>
 		</div>
 	</div>
-	<div id="quoteMain" class="screen" >
-		<div class="submitButton glowBorder info"></div>
+	<div id="quoteMain" class="screen">
+		<div id="quoteMainInfoOpen" class="submitButton glowBorder info"></div>
 		<div class="main">
 			<h2 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h2>
 			<p id="quoteMainUser">Bryan Wong, Los Angeles</p>
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
+			<p id="quoteMainInfo" style="opacity: 0;">Home means something different to everyone. We asked people what home means to them and gave them a toy...</p>
 		</div>
 	</div>
+<!-- 	<div id="quoteMainInfo" class="screen">
+		<div class="main">
+			<h1>Homes and Lights</h1>
+			<p>Home means something different to everyone. We asked people what home means to them and gave them a toy...</p>
+			<div id="quoteMainInfoClose" class="submitButton glowBorder"></div>
+		</div>
+	</div> -->
 	<div id="donation" class="screen">
 		<div class="wrapper">
 			<div class="main">
