--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -19,6 +19,7 @@
 			<p class="blinkAnim">CLICK AND HOLD</p>
 		</div>
 	</div>
+	<div id="instructions">Hold down space to explore</div>
 	<div id="nameInput" class="screen">
 		<div class="main">
 			<h1 class="glow">What's your name?</h1>
@@ -43,6 +44,7 @@
 	<div id="quoteMain" class="screen">
 		<div id="quoteMainInfoOpen" class="submitButton glowBorder info"></div>
 		<div class="main">
+			<h1>Home is...</h1>
 			<h2 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h2>
 			<p id="quoteMainUser">Bryan Wong, Los Angeles</p>
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
