--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,21 @@ h1, h2, header, p, a, span {
       margin: auto;
       margin-bottom: 10px; }
 
+#instructions {
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+  pointer-events: none;
+  font-family: "Brandon Text";
+  font-style: italic;
+  font-size: .8rem;
+  color: #929598;
+  opacity: 0;
+  top: 55%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all .4s ease; }
+
 #quoteInput, #nameInput {
   z-index: 3;
   visibility: hidden; }
@@ -135,12 +150,6 @@ h1, h2, header, p, a, span {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
-    #quoteMain .main h1 {
-      font-family: "Univers";
-      font-style: italic;
-      font-weight: 300;
-      color: #808285;
-      font-size: .7rem; }
     #quoteMain .main h2 {
       font-family: "Brandon Text";
       color: #f4f5f7;
@@ -149,12 +158,15 @@ h1, h2, header, p, a, span {
       margin: auto;
       font-weight: lighter;
       margin-bottom: 0; }
-    #quoteMain .main p {
+    #quoteMain .main p, #quoteMain .main h1 {
       font-family: "Brandon Text";
       color: #929598;
       font-size: 1.2rem;
       margin: 0;
       margin: 15px; }
+    #quoteMain .main h1 {
+      font-size: .8rem;
+      margin: 5px; }
   #quoteMain #quoteMainInfo {
     font-size: .83rem;
     color: #808285;
@@ -273,16 +285,9 @@ h1, h2, header, p, a, span {
   width: 65%;
   padding: 20px;
   visibility: hidden;
-  background: none;
-  overflow:scroll;
-  overflow-y:scroll;
-  -webkit-overflow-scrolling: touch;
-}
+  background: none; }
   #donation .wrapper {
-      overflow: scroll;
-      /* Add touch scrolling */
-      overflow-y: scroll; 
-      -webkit-overflow-scrolling: touch;
+    overflow: scroll;
     height: 100%;
     width: 100%;
     padding: 35px;
@@ -431,40 +436,3 @@ h1, h2, header, p, a, span {
       font-style: italic;
       text-transform: lowercase;
       list-style: none; }
-
-
-    .mobileShow{
-	display:none;
-    }
-    @media only screen
-    and (min-device-width : 100px)
-    and (max-device-width : 600px){
-	display: inline;
-    }
-
-
-    .noSelectTouch {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-  @media screen and (max-width:600px){
-  select,
-  textarea,
-  input {
-      font-size: 16px;
-  }
-}
-
-  @media screen and (max-width:600px){
-  select:focus,
-  textarea:focus,
-  input:focus {
-    font-size: 16px;
-    background: #eee;
-  }
-}
