--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -67,6 +67,7 @@
 					<p>What is home? Some say it's where the lights are, where the family is. Or maybe it's <span id="donationQuoteAnswer">sample here</span> The question of what is easier to answer than where. </br></br>Every year, Liberty in North Korea helps refugees escape an oppressive country. They do this this that this... Help by donating to LiNK below.</p>
 					<a href="/https://www.libertyinnorthkorea.org/" target="_blank">learn more</a>
 				</div>
+				<div id="donationConfirm">Thanks for your contribution!</div>
 				<form id="donationForm" spellcheck="false">
 					<div class="form-group name">
 						<label for="name">first name</label>
