--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -48,7 +48,7 @@
 			<h2 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h2>
 			<p id="quoteMainUser">Bryan Wong, Los Angeles</p>
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
-			<p id="quoteMainInfo" style="opacity: 0;">Home means something different to everyone. We asked people what home means to them and gave them a toy...</p>
+			<p id="quoteMainInfo" style="opacity: 0;">Home means something different to everyone. Each of these characters represents a </p>
 		</div>
 	</div>
 <!-- 	<div id="quoteMainInfo" class="screen">
@@ -64,7 +64,7 @@
 				<div id="donationClose" class="submitButton glowBorder"></div>
 				<div class="info">
 					<h1 class="glow">Help others find a home</h1>
-					<p>What is home? Some say it's where the lights are, where the family is. Or maybe it's <span id="donationQuoteAnswer">sample here</span> The question of what is easier to answer than where. </br></br>Every year, Liberty in North Korea helps refugees escape an oppressive country. They do this this that this... Help by donating to LiNK below.</p>
+					<p>What is home? Maybe it's better to ask where it is, or what it feels like. Or maybe it's <span id="donationQuoteAnswer">sample here</span> That <span id="userCharacter"></span> you see in the middle is your character, and those other avatars were made by people just like you. Each of them comes with their own meaning of home. Share your avatar with your friends using this link: <a id="userCharacterLink"></a></br></br></br>Liberty in North Korea is an organization that helps refugees escape an oppressive regime and find new homes across the world. You can support the cause by donating through the form below.</p>
 					<a href="https://www.libertyinnorthkorea.org/" target="_blank">learn more</a>
 				</div>
 				<div id="donationConfirm">Thanks for your contribution!</div>
