--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -388,6 +388,14 @@ h1, h2, header, p, a, span{
 		}
 	}
 
+	#userCharacterLink{
+		color: $white;
+
+		&:hover{
+			cursor: pointer;
+		}
+	}
+
 	#donationQuoteAnswer{
 		color: $white;
 		font-size: 1.5rem;
