--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,10 +42,10 @@ h1, h2, header, p, a, span {
       font-weight: lighter;
       font-size: 1.3rem;
       margin: 0;
-      color: #f4f5f7;
+      color: #929598;
       margin-bottom: 10px; }
     #title .main p {
-      font-family: "Univers";
+      font-family: "Brandon Text";
       font-style: italic;
       font-size: .8rem;
       margin: 30px;
@@ -55,6 +55,9 @@ h1, h2, header, p, a, span {
       display: block;
       margin: auto;
       margin-bottom: 10px; }
+
+.main h1 {
+  pointer-events: none; }
 
 #instructions {
   text-align: center;
@@ -168,7 +171,7 @@ h1, h2, header, p, a, span {
       font-size: .8rem;
       margin: 5px; }
   #quoteMain #quoteMainInfo {
-    font-size: .83rem;
+    font-size: .9rem;
     color: #808285;
     margin: auto;
     margin-top: 30px;
