--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -67,11 +67,12 @@ h1, h2, header, p, a, span{
 			font-weight: lighter;
 			font-size: 1.3rem;
 			margin: 0;
-			color: $white;
+			color: $lightgray;
 			margin-bottom: 10px;
 		}
 		p{
-			@include instruction-font();
+			font-family: $Brandon;
+			font-style: italic;
 			font-size: .8rem;
 			margin: 30px;
 			color: $lightgray;
@@ -91,8 +92,10 @@ h1, h2, header, p, a, span{
 	}
 }
 
-.infoButton{
-
+.main{
+	h1{
+		pointer-events: none;
+	}
 }
 
 #instructions{
@@ -226,7 +229,7 @@ h1, h2, header, p, a, span{
 	}
 
 	#quoteMainInfo{
-		font-size: .83rem;
+		font-size: .9rem;
 		color: $gray;
 		margin: auto;
 		margin-top: 30px;
