--- a/views/index-main.ejs
+++ b/views/index-main.ejs
@@ -15,8 +15,8 @@
 	<div id="title" class="screen noSelectTouch">
 		<div class="main">
 			<h1 class="glow">Home</h1>
-			<h2>a charity project for Liberty in North Korea.</h2>
-			<p class="blinkAnim">CLICK AND HOLD</p>
+			<h2>finding home: here, there and across the globe.</h2>
+			<p class="blinkAnim">Click and hold</p>
 		</div>
 	</div>
 	<div id="instructions">Hold down space to explore</div>
@@ -48,7 +48,7 @@
 			<h2 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h2>
 			<p id="quoteMainUser">Bryan Wong, Los Angeles</p>
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
-			<p id="quoteMainInfo" style="opacity: 0;">Home means something different to everyone. Each of these characters represents a </p>
+			<p id="quoteMainInfo" style="opacity: 0;">You know what home means to you. But what about everyone else? Meet other characters and find out what home means to users across the world, just like you.</p>
 		</div>
 	</div>
 <!-- 	<div id="quoteMainInfo" class="screen">
@@ -63,8 +63,8 @@
 			<div class="main">
 				<div id="donationClose" class="submitButton glowBorder"></div>
 				<div class="info">
-					<h1 class="glow">Help others find a home</h1>
-					<p>What is home? Maybe it's better to ask where it is, or what it feels like. Or maybe it's <span id="donationQuoteAnswer">sample here</span> That <span id="userCharacter"></span> you see in the middle is your character, and those other avatars were made by people just like you. Each of them comes with their own meaning of home. Share your avatar with your friends using this link: <a id="userCharacterLink"></a></br></br></br>Liberty in North Korea is an organization that helps refugees escape an oppressive regime and find new homes across the world. You can support the cause by donating through the form below.</p>
+					<h1 class="glow">Finding Home</h1>
+					<p>What is home? Maybe it's better to ask where it is, or what it feels like. Or maybe it's <span id="donationQuoteAnswer">sample here</span> That <span id="userCharacter"></span> you see in the middle is your unique character, and those other avatars were made by people just like you. Each of them comes with their own meaning of home. Share your avatar with your friends using this link: <a id="userCharacterLink"></a></br></br></br>Liberty in North Korea is an organization that helps refugees escape an oppressive regime and find new homes across the world. You can support the cause by donating through the form below.</p>
 					<a href="https://www.libertyinnorthkorea.org/" target="_blank">learn more</a>
 				</div>
 				<div id="donationConfirm">Thanks for your contribution!</div>
